--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,3 +7,11 @@ body {
     margin: 0;
     padding: 0;
 }
+@font-face {
+    font-family: 'Cafe24Font';
+    src: url('/fonts/Cafe24SsrroundAir-v1.1.woff') format('woff'),
+       url('/fonts/Cafe24SsrroundAir-v1.1.woff2') format('woff2');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+}
